spacing fix

--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,6 @@ body {
 }
 
 .step-header {
-  gap: 1rem;
-  width: 70%;
   display: flex;
   flex-direction: column;
 }
@@ -70,15 +68,17 @@ body {
   flex-direction: column;
 }
 
+.bg-hero {
+  position: sticky;
+  top: 0;
+  z-index: -10;
+}
+
 .steps-layout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 3rem;
-  width: 200vw;
   margin: auto 0;
-  padding-left: 20%;
-  padding-right: 20%;
-  flex-wrap: nowrap;
 }
 
 .step-wrapper {
@@ -90,8 +90,14 @@ body {
 
 .morph {
   z-index: 99999999999;
-  margin-left: 20px;
-  margin-top: -22px;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pace .pace-progress {
@@ -175,6 +181,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1px;
+  background-color: var(--bg-color);
 }
 
 .marquee-row {
@@ -198,7 +205,7 @@ body {
 }
 
 .marquee-fixed-height {
-  padding: 1rem 0 1rem 0;
+  padding: 0.05rem 0 1rem 0;
   margin-top: -1rem;
   margin-bottom: -1rem;
 }
@@ -303,11 +310,16 @@ body {
 
 .service-wrap {
   outline: 1px solid var(--bg-color-inverted);
-  padding: 6rem 4rem;
+  padding: 4rem 4rem;
   opacity: 0;
   color: var(--text-color);
   background-color: var(--gray);
   transform: translateY(60px);
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .heading-hero > .wordsParent:nth-child(5) > .wordsChild {
@@ -489,6 +501,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 40px;
 }
 
 .client-header {
@@ -536,6 +549,11 @@ body {
   border-radius: 99999px;
   outline: 1px solid var(--bg-border);
 }
+
+.step-row {
+  display: flex;
+  flex-direction: row;
+}
 .step-item {
   display: flex;
   justify-content: flex-start;
@@ -546,11 +564,10 @@ body {
 }
 
 .step-inner {
-  width: 100%;
   display: flex;
-  gap: 1px;
-  flex-direction: row;
-  background-color: var(--gray);
+  gap: 1rem;
+  flex: 1;
+  flex-direction: column;
 }
 
 .step-text-wrapper {
@@ -642,7 +659,7 @@ body {
   color: var(--text-color-inverted) !important;
 }
 .bg-light {
-  /* background-color: var(--beige); */
+  background-color: var(--bg-color);
   /* background-color: #c3dccd; */
   /* color: var(--black) !important; */
 }
@@ -851,6 +868,13 @@ body {
 
   .step-inner {
     flex-direction: column;
+    gap: 0rem;
+  }
+
+  .step-row {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
   }
 
   .step-text-wrapper {
@@ -978,5 +1002,13 @@ body {
 
   .contact-header {
     font-size: 2rem;
+  }
+  .david-container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-top: -40px;
+    margin-bottom: -40px;
+    color: var(--text-color);
+    border-radius: 0px;
   }
 }
